--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -1,69 +1,45 @@
 {% extends 'knp_menu.html.twig' %}
 
 {% block list %}
-    {#    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
-    {#        {% import _self as knp_menu %}#}
-    {#        <div class="navigation">#}
-    {#            <nav class="container">#}
-    {#            <div id="header" class="navigation__header okayNav-header">#}
-    {#                    <nav role="navigation" id="nav-main" class="okayNav">#}
-    {#                        <ul>#}
-    {#                    {{ block('children') }}#}
-    {#                        </ul>#}
-    {#                    </nav>#}
-    {#                </div><!-- /header -->#}
-    {#            </nav>#}
-    {#        </div>#}
+{#    {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}#}
+{#        {% import _self as knp_menu %}#}
+{#        <div class="navigation">#}
+{#            <nav class="container">#}
+{#            <div id="header" class="navigation__header okayNav-header">#}
+{#                    <nav role="navigation" id="nav-main" class="okayNav">#}
+{#                        <ul>#}
+{#                    {{ block('children') }}#}
+{#                        </ul>#}
+{#                    </nav>#}
+{#                </div><!-- /header -->#}
+{#            </nav>#}
+{#        </div>#}
 
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+
+    <nav class="nav d-flex justify-content-between">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08"
+                aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
 
-    <div class="nav-scroller py-1 mb-2" >
-{#        <nav class="nav d-flex justify-content-between" id="navbarsExample08">#}
-{#            <a class="p-2 text-muted" href="#">World</a>#}
-{#            <a class="p-2 text-muted" href="#">U.S.</a>#}
-{#            <a class="p-2 text-muted" href="#">Technology</a>#}
-{#            <a class="p-2 text-muted" href="#">Design</a>#}
-{#            <a class="p-2 text-muted" href="#">Culture</a>#}
-{#            <a class="p-2 text-muted" href="#">Business</a>#}
-{#            <a class="p-2 text-muted" href="#">Politics</a>#}
-{#            <a class="p-2 text-muted" href="#">Opinion</a>#}
-{#            <a class="p-2 text-muted" href="#">Science</a>#}
-{#            <a class="p-2 text-muted" href="#">Health</a>#}
-{#            <a class="p-2 text-muted" href="#">Style</a>#}
-{#            <a class="p-2 text-muted" href="#">Travel</a>#}
-{#        </nav>#}
-
-        <nav class="nav d-flex justify-content-between" id="navbarsExample08">
-
-        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Centered nav only <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown08" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown08">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-            </ul>
+        <div class="nav-scroller py-1 mb-2" id="navbarsExample08">
+            <a class="p-2 text-muted" href="#">World</a>
+            <a class="p-2 text-muted" href="#">U.S.</a>
+            <a class="p-2 text-muted" href="#">Technology</a>
+            <a class="p-2 text-muted" href="#">Design</a>
+            <a class="p-2 text-muted" href="#">Culture</a>
+            <a class="p-2 text-muted" href="#">Business</a>
+            <a class="p-2 text-muted" href="#">Politics</a>
+            <a class="p-2 text-muted" href="#">Opinion</a>
+            <a class="p-2 text-muted" href="#">Science</a>
+            <a class="p-2 text-muted" href="#">Health</a>
+            <a class="p-2 text-muted" href="#">Style</a>
+            <a class="p-2 text-muted" href="#">Travel</a>
         </div>
-        </nav>
+    </nav>
 
-    </div>
-
-
-    {#    {% endif %}#}
+{#    {% endif %}#}
 {% endblock %}
