--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -15,25 +15,48 @@
 {#            </nav>#}
 {#        </div>#}
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <nav class="navbar site-header sticky-top py-1">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-
-    <nav class="site-header sticky-top py-1">
-        <div class="container d-flex flex-column flex-md-row justify-content-between" id="navbarsExample08">
-            <a class="py-2" href="#">
-                Bild Der Frau
-            </a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Product</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
+        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Centered nav only <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown08" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown08">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+            </ul>
         </div>
     </nav>
+
+{#    <nav class="site-header sticky-top py-1">#}
+{#        <div class="container d-flex flex-column flex-md-row justify-content-between" id="navbarsExample08">#}
+{#            <a class="py-2" href="#">#}
+{#                Bild Der Frau#}
+{#            </a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Product</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Features</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Support</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>#}
+{#            <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>#}
+{#        </div>#}
+{#    </nav>#}
 
 {#    {% endif %}#}
 {% endblock %}
