--- a/views/widgets/mainNav.html.twig
+++ b/views/widgets/mainNav.html.twig
@@ -22,8 +22,8 @@
 
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">{{ block('children') }} <span class="sr-only">(current)</span></a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">navmenu </a>
                 </li>
 
             </ul>
